# knowledge-base-assistant

./: .gitignore  README.md  pyproject.toml
.github/workflows/: mirror-to-gitlab.yml
data/evaluation/: golden_queries.jsonl
docs/evaluation/: bm25_baseline.md  metrics_baseline.md
scripts/: analyze_retrieval.py
src/knowledge_base_assistant/: cli.py
src/knowledge_base_assistant/application/: dense_indexing.py  dense_retrieval_evaluation.py  dense_search.py  embedding_model_factory.py  golden_validation.py  indexing.py  lexical_retrieval_evaluation.py  retrieval_analysis.py  retrieval_comparison.py  retrieval_error_report.py  retrieval_evaluation.py  search.py  statistics.py
src/knowledge_base_assistant/domain/: ids.py  models.py
src/knowledge_base_assistant/evaluation/: metrics.py  models.py  serialization.py  validation.py
src/knowledge_base_assistant/ingestion/: chunker.py  markdown_parser.py  scanner.py
src/knowledge_base_assistant/retrieval/: base.py  bm25.py  models.py  tokenizer.py
src/knowledge_base_assistant/retrieval/dense/: embedding.py  index.py  index_builder.py  index_storage.py  models.py  sentence_transformer.py  serialization.py
src/knowledge_base_assistant/retrieval/lexical/: bm25.py
src/knowledge_base_assistant/serialization/: jsonl.py
tests/integration/: test_cli.py  test_indexing.py  test_ingestion_pipeline.py
tests/unit/: test_cli_dense.py  test_ids.py  test_markdown_parser.py  test_models.py  test_scanner.py
tests/unit/application/: test_dense_indexing.py  test_dense_indexing_pipeline.py  test_dense_retrieval_evaluation.py  test_dense_search.py  test_embedding_model_factory.py  test_lexical_retrieval_evaluation.py  test_retrieval_analysis.py  test_retrieval_comparison.py  test_retrieval_evaluation.py  test_search.py  test_statistics.py
tests/unit/domain/: test_ids.py  test_models.py
tests/unit/evaluation/: test_metrics.py  test_serialization.py  test_validation.py
tests/unit/ingestion/: test_chunker.py  test_markdown_parser.py
tests/unit/retrieval/: test_bm25.py  test_tokenizer.py
tests/unit/retrieval/dense/: test_embedding.py  test_index.py  test_index_builder.py  test_index_storage.py  test_models.py  test_sentence_transformer.py  test_serialization.py
tests/unit/serialization/: test_golden_queries_jsonl.py  test_jsonl.py
